Revert "increase number of cards on dashboard and fix text wrapping of sidebar"

--- a/dashboard/src/t5gweb/static/style.css
+++ b/dashboard/src/t5gweb/static/style.css
@@ -137,6 +137,3 @@ ul.highlight:hover {
   background-color: #eee;
 }
 
-.link-dark {
-  overflow-wrap: anywhere;
-}
